compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_if_action_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_if_action_type.fpp:7.26
    choice C { if g do { a } enter T else enter T }
                         ^
error: type mismatch at choice
type of choice is None
type of action is U32
